--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,11 @@
 <body>
     <div class="navbar">
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Donate</a></li>
+            <!--
+                navbar links
+            <li href="#">Home</li>
+            <li href="#">Contact</li>
+            -->
         </ul>
     </div>
 
