--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 
         {% if prediction %}
         <div class="result-box">
-            <h3>Predicted G3:</h3>
+            <h3>Predicted Grade 3 Score:</h3>
             <p>{{ prediction }}</p>
         </div>
         {% endif %}
